@@ -1929,6 +1929,7 @@
 2) init.d/goahead: add support KickStaRssiLowPSM.<br>
 3) init.d: move tune roaming and advanced wifi parametrs to internet.sh (fix apply params by external logic reconfigure, as vlans and others).<br>
 4) init.d: wifi params apply linerazed, remove unneded sleeps and avoid call for not existent interfaces.<br>
+5) band steering: review managment code, fix dissalow 5GHz connect in some cases and more smooth transit 5->2.4 and back.<br>
 <br>
 <br>
 <br>
